filehandler first draft finished

--- a/web/index.html
+++ b/web/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive Web Console</title>
+  <title>CloudShell</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" sizes="32x32"  href="/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32"  href="/favicon/favicon-32x32.png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
 </head>
